[gd_scene load_steps=10 format=3 uid="uid://ccbxfyjc22eqs"]

[ext_resource type="Script" path="res://Scripts/Bullet/MagicWandBullet.gd" id="1_5gjjm"]
[ext_resource type="Texture2D" uid="uid://cs1a388h676ra" path="res://Assets/Weapons/Bullet/MagicWandBullet.png" id="2_1y6o7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1rf42"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yx4d5"]
atlas = ExtResource("2_1y6o7")
region = Rect2(0, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfcto"]
atlas = ExtResource("2_1y6o7")
region = Rect2(48, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0q6fi"]
atlas = ExtResource("2_1y6o7")
region = Rect2(96, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ma7lw"]
atlas = ExtResource("2_1y6o7")
region = Rect2(144, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsoom"]
atlas = ExtResource("2_1y6o7")
region = Rect2(48, 0, 48, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_uajp8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yx4d5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfcto")
}],
"loop": true,
"name": &"shoot_begin",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0q6fi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ma7lw")
}],
"loop": true,
"name": &"shoot_destroy",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsoom")
}],
"loop": true,
"name": &"shoot_normal",
"speed": 5.0
}]

[node name="MagicWandBullet" type="RigidBody2D"]
collision_layer = 0
collision_mask = 2
gravity_scale = 0.0
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_5gjjm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1rf42")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(4, -9)
sprite_frames = SubResource("SpriteFrames_uajp8")
animation = &"shoot_destroy"
frame_progress = 0.883104

[node name="ShootBeginTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="ShootDestroyTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ShootBeginTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ShootDestroyTimer" to="." method="_on_shoot_destroy_timer_timeout"]
